--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -182,6 +182,7 @@
                     "vlan_manager": "VLAN Manager",
                     "verify_networks_button": "Verify Networks",
                     "neutron_segmentation": "Neutron with __segment_type__ segmentation",
+                    "untagged": "untagged",
                     "range_start": "Start",
                     "range_end": "End",
                     "verify_networks": {
@@ -524,6 +525,7 @@
                     "flatdhcp_manager": "FlatDHCP管理",
                     "vlan_manager": "VLAN管理",
                     "verify_networks_button": "验证网络",
+                    "untagged": "",
                     "range_start": "开始",
                     "range_end": "结束",
                     "verify_networks": {
