--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -221,6 +221,8 @@
                         "l2_configuration": "Neutron L2 Configuration",
                         "l3_configuration": "Neutron L3 Configuration",
                         "id_range": "ID range",
+                        "gre_id_range": "Tunnel ID range",
+                        "vlan_id_range": "VLAN ID range",
                         "base_mac": "Base MAC address",
                         "external_network": "External network",
                         "cidr": "CIDR",
