Sort node groups according to release model
Implements: blueprint role-sorting-in-ui

Change-Id: I24371c8824e2839968398fa3034b981667ecc3f7

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -26,6 +26,8 @@
             },
             "node_details": {
                 "cpu": "CPU",
+                "hdd": "HDD",
+                "ram": "RAM",
                 "system": "System",
                 "memory": "Memory",
                 "disks": "Disks",
@@ -157,11 +159,6 @@
                         "interfaces_configuration_warning": "Only not deployed nodes with an identical number of network interfaces can be configured together in the same action."
                     },
                     "node": {
-                        "hardware": {
-                            "cpu": "CPU",
-                            "hdd": "HDD",
-                            "ram": "RAM"
-                        },
                         "status": {
                             "discovered": "Discovered",
                             "offline": "Offline",
