--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -138,7 +138,7 @@
                         "title": "Configure interfaces on __name__",
                         "title_plural": "Configure interfaces on __count__ nodes",
                         "speed": "Speed",
-                        "drag_and_drop_description": "You can drag and drop logical networks between physical interfaces",
+                        "drag_and_drop_description": "You can drag and drop logical networks between interfaces",
                         "neutron_vlan_range": "Neutron VLAN IDs",
                         "validation": {
                             "too_many_untagged_networks": "Untagged networks can not be assigned to the same interface"
