--- a/docs/develop/i18n.rst
+++ b/docs/develop/i18n.rst
@@ -19,3 +19,17 @@ If you want to add new strings to the translations file, follow these rules:
 #. If some keys are used in a few places (for example, in utils), move them to
    "common.*" namespace.
 #. Use defaultValue ONLY with dynamically generated keys.
+
+Validating translations
+=========================================
+To search for absent and unnecessary translation keys you can perform the following steps:
+
+#. Open terminal and cd to fuel-web/nailgun directory.
+#. Run "grunt i18n:validate" to start the validation.
+   If there are any mismatches, you'll see the list of mismatching keys.
+
+Grunt task "i18n:validate" has one optional argument - a comma-separated list of
+languages to compare with base English en-US translations. Run
+"grunt i18n:validate:zh-CN" to perform comparison only between English and
+Chinese keys. You can also run "grunt i18n:validate:zh-CN,ru-RU" to perform
+comparison between English-Chinese and English-Russian keys.
