--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -127,7 +127,8 @@
                     "settings": "Settings",
                     "logs": "Logs",
                     "healthcheck": "Health Check",
-                    "actions": "Actions"
+                    "actions": "Actions",
+                    "fencing": "HA Fencing"
                 },
                 "nodes_tab": {
                     "roles": "Roles",
@@ -294,6 +295,9 @@
                     "expected_duration": "Expected Duration",
                     "actual_duration": "Actual Duration",
                     "status": "Status"
+                },
+                "fencing_tab": {
+                    "title": "HA Fencing"
                 },
                 "deploy_changes": "Deploy Changes",
                 "deployment_mode": "Environment Deployment Mode:",
