--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -244,56 +244,49 @@
                         "expected_vlan": "Expected VLAN (not received)"
                     },
                     "network_parameters": {
-                        "ip_range": "IP Range",
+                        "ip_range": "IP range",
+                        "ip_start": "IP range start",
+                        "ip_end": "IP range end",
+                        "id_start": "ID range start",
+                        "id_end": "ID range end",
                         "netmask": "Netmask",
                         "vlan_id": "VLAN ID",
                         "gateway": "Gateway",
                         "cidr": "CIDR",
-                        "nubmer_of_networks": "Number of Networks",
-                        "size_of_networks": "Size of Networks",
+                        "nubmer_of_networks": "Number of networks",
+                        "size_of_networks": "Size of networks",
                         "vlan_id_range": "VLAN ID range",
-                        "use_vlan_tagging": "Use VLAN Tagging"
-                    },
-                    "nova": {
+                        "use_vlan_tagging": "Use VLAN Tagging",
+                        "nameserver": "nameserver",
+                        "subnet": "subnet address",
+                        "broadcast": "broadcast address",
+                        "external_floating": "External network Floating IP range",
+                        "internal_cidr": "Internal network CIDR",
                         "dns_servers": "DNS Servers",
-                        "name_servers": "Name servers"
-                    },
-                    "neutron": {
                         "l2_configuration": "Neutron L2 Configuration",
                         "l3_configuration": "Neutron L3 Configuration",
                         "id_range": "ID range",
                         "gre_id_range": "Tunnel ID range",
-                        "vlan_id_range": "VLAN ID range",
                         "base_mac": "Base MAC address",
                         "external_network": "External network",
-                        "cidr": "CIDR",
                         "floaing_ip": "Floating IP range",
                         "internal_network": "Internal network",
-                        "gateway": "Gateway",
                         "name_servers": "Name servers"
                     },
                     "validation": {
-                        "invalid_ip_start": "Invalid IP range start",
-                        "invalid_ip_end": "Invalid IP range end",
-                        "invalid_ip_range": "IP range start is greater than IP range end",
+                        "invalid": "Invalid __opt1__",
+                        "invalid_range": "__opt1__ is greater than __opt2__",
+                        "conflicts": "__opt1__ conflicts with __opt2__",
+                        "conflicts_with_other_networks": "__opt1__ conflicts with __opt1__ of other networks",
+                        "conflicts_with_public": "__opt1__ conflicts with Public __opt2__",
+                        "out_of_public": "__opt1__ is out of Public __opt2__",
+                        "large_network": "Network is too large",
+                        "small_network": "Network is too small",
                         "empty_ip_range": "Please specify at least one IP range",
-                        "invalid_vlan": "Invalid VLAN ID",
-                        "forbidden_vlan": "This VLAN ID is used by other networks. Please choose another ID",
-                        "vlan_is_used_for_fixed_networks": "This VLAN ID reserved for VM networks (fixed). Please choose another ID",
-                        "invalid_netmask": "Invalid netmask",
-                        "invalid_gateway": "Invalid gateway",
-                        "invalid_amount": "Invalid amount of networks",
-                        "gateway_is_out_of_ip_range": "This Gateway address is outside of the Public IP range",
-                        "gateway_is_out_of_internal_ip_range": "This Gateway address is out of the internal network IP range",
-                        "need_more_vlan": "The number of networks defined needs more VLAN IDs than available. Check VLAN ID Range field.",
-                        "invalid_nameserver": "Invalid nameserver",
-                        "invalid_id_start": "Invalid ID range start",
-                        "invalid_id_end": "Invalid ID range end",
-                        "invalid_id_range": "The ID range start is greater than ID range end",
-                        "id_intersection": "There is an intersection with the VLAN ID of other networks. Please set another ID range",
-                        "invalid_mac": "Invalid MAC address",
-                        "ip_start_is_out_of_ip_range": "The IP start is outside of the IP range",
-                        "ip_end_is_out_of_ip_range": "The IP end is outside  of the IP range"
+                        "ip_ranges_intersection": "IP range conflicts with another defined IP range",
+                        "need_more_vlan": "Number of networks defined needs more VLAN IDs than available. Check VLAN ID range field",
+                        "cidr_intersection": "This address space conflicts with spaces of other networks",
+                        "gateway_is_out_of_internal_ip_range": "Gateway is out of Internal network IP range"
                     }
                 },
                 "logs_tab": {
@@ -842,18 +835,14 @@
                         "nubmer_of_networks": "网络数量",
                         "size_of_networks": "网络大小",
                         "vlan_id_range": "VLAN ID范围",
-                        "use_vlan_tagging": "使用VLAN标记"
-                    },
-                    "neutron": {
+                        "use_vlan_tagging": "使用VLAN标记",
                         "l2_configuration": "Neutron L2配置",
                         "l3_configuration": "Neutron L3配置",
                         "id_range": "ID范围",
                         "base_mac": "基础MAC地址",
                         "external_network": "外部网络",
-                        "cidr": "CIDR",
                         "floaing_ip": "浮动IP范围",
                         "internal_network": "内部网络",
-                        "gateway": "网关",
                         "name_servers": "Name servers"
                     }
                 },
