Networks validation (IP ranges intersections)
Closes-Bug: #1271070

Change-Id: I97c3d4aa63012451c7c039fd40d6aac09f7d8877

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -251,23 +251,29 @@
                         "invalid_ip_end": "Invalid IP range end",
                         "invalid_ip_range": "IP range start is greater than IP range end",
                         "empty_ip_range": "Please specify at least one IP range",
+                        "ip_ranges_intersection": "This IP range intersects others",
+                        "public_ip_range_intersects_floating_range": "This Public IP range intersects Floating IP ranges",
+                        "floating_ip_range_intersects_public_range": "This Floating IP range intersects Public IP ranges",
                         "invalid_vlan": "Invalid VLAN ID",
                         "forbidden_vlan": "This VLAN ID is used by other networks. Please choose another ID",
                         "vlan_is_used_for_fixed_networks": "This VLAN ID reserved for VM networks (fixed). Please choose another ID",
                         "invalid_netmask": "Invalid netmask",
                         "invalid_gateway": "Invalid gateway",
                         "invalid_amount": "Invalid amount of networks",
-                        "gateway_is_out_of_ip_range": "This Gateway address is outside of the Public IP range",
-                        "gateway_is_out_of_internal_ip_range": "This Gateway address is out of the internal network IP range",
-                        "need_more_vlan": "The number of networks defined needs more VLAN IDs than available. Check VLAN ID Range field.",
+                        "gateway_is_out_of_ip_range": "This gateway address is outside of the Public IP range",
+                        "gateway_intersects_ip_ranges": "This gateway address intersects Public IP ranges",
+                        "gateway_intersects_floating_ip_range": "This gateway intersects External network floating IP range",
+                        "gateway_is_out_of_internal_ip_range": "This gateway address is out of the internal network IP range",
+                        "need_more_vlan": "The number of networks defined needs more VLAN IDs than available. Check VLAN ID Range field",
                         "invalid_nameserver": "Invalid nameserver",
                         "invalid_id_start": "Invalid ID range start",
                         "invalid_id_end": "Invalid ID range end",
                         "invalid_id_range": "The ID range start is greater than ID range end",
                         "id_intersection": "There is an intersection with the VLAN ID of other networks. Please set another ID range",
                         "invalid_mac": "Invalid MAC address",
-                        "ip_start_is_out_of_ip_range": "The IP start is outside of the IP range",
-                        "ip_end_is_out_of_ip_range": "The IP end is outside  of the IP range"
+                        "ip_start_is_out_of_ip_range": "The IP start is outside of the Public IP range",
+                        "ip_end_is_out_of_ip_range": "The IP end is outside  of the Public IP range",
+                        "cidr_intersection": "This IP addresses space intersects spaces of other networks"
                     }
                 },
                 "logs_tab": {
