--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -408,8 +408,8 @@
                     "mac_address_label": "MAC Address",
                     "fqdn_label": "FQDN",
                     "ssh_console": "SSH console",
-                    "network_configuration_button": "Configure Interfaces",
-                    "disk_configuration_button": "Configure Disks",
+                    "network_configuration_button": "Interfaces",
+                    "disk_configuration_button": "Disks",
                     "close_button": "Close",
                     "total": "total",
                     "bytes": "bytes",
