Making Interfaces button available for deployed nodes
Change-Id: I925b1764d0262781a4dd5bea8917bdbba39a029d
Closes-bug: 1273599

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -408,8 +408,8 @@
                     "mac_address_label": "MAC Address",
                     "fqdn_label": "FQDN",
                     "ssh_console": "SSH console",
-                    "network_configuration_button": "Configure Interfaces",
-                    "disk_configuration_button": "Configure Disks",
+                    "network_configuration_button": "Interface Configuration",
+                    "disk_configuration_button": "Disk Configuration",
                     "close_button": "Close",
                     "total": "total",
                     "bytes": "bytes",
