--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -365,14 +365,17 @@
                         "title": "Name and Release",
                         "name": "Name",
                         "release_label": "OpenStack Release",
-                        "red_hat_info": "To deploy Red Hat OpenStack, you must first download both RHOS and RHEL to be cached on the Fuel master node.  You can do this from the Releases page or just choose your subscription type and enter your credentials below.  RHEL and RHOS will be automatically downloaded and cached after you create the environment."
+                        "red_hat_info": "To deploy Red Hat OpenStack, you must first download both RHOS and RHEL to be cached on the Fuel master node.  You can do this from the Releases page or just choose your subscription type and enter your credentials below.  RHEL and RHOS will be automatically downloaded and cached after you create the environment.",
+                        "existing_environment": "Environment with name \"__name__\" already exists"
                     },
                     "mode": {
                         "title": "Deployment Mode"
                     },
                     "compute": {
                         "title": "Compute",
+                        "kvm_title": "KVM",
                         "kvm_description": "Choose this type of hypervisor if you run OpenStack on hardware",
+                        "qemu_title": "QEMU",
                         "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts"
                     },
                     "network": {
