--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -29,7 +29,8 @@
                 "success": "Success",
                 "error": "Error",
                 "see_logs": "see the logs",
-                "copyright": "Copyright © 2014 Mirantis. All rights reserved."
+                "copyright": "Copyright © 2014 Mirantis. All rights reserved.",
+                "error_cluster_409": "Cluster with such parameters already exists"
             },
             "node_details": {
                 "cpu": "CPU",
@@ -204,7 +205,8 @@
                     "no_nodes_in_environment": "To add nodes to the environment, select the Add Nodes option, choose the nodes you want to allocate and assign roles to each.",
                     "no_nodes_in_fuel": "A pool of one or more unallocated nodes is needed for this operation. To add to the pool, configure nodes to boot from the network (a.k.a. PXE booting). Fuel will automatically provision and discover the nodes.",
                     "one_controller_restriction": "Only one controller can be assigned in a multi-node deployment that is not Highly-Available (HA).",
-                    "incompatible_roles_warning" : "This role cannot be combined with the other roles already selected."
+                    "incompatible_roles_warning" : "This role cannot be combined with the other roles already selected.",
+                    "new_controllers_in_ha_mode_restriction": "New controllers cannot be added to an operational environment."
                 },
                 "settings_tab": {
                     "title": "OpenStack Settings"
@@ -315,7 +317,7 @@
                     "title": "OpenStack Health Check",
                     "run_tests_button": "Run Tests",
                     "stop_tests_button": "Stop Tests",
-                    "deploy_alert": "You must deploy your OpenStack environment before running tests against it.",
+                    "deploy_alert": "You must deploy your new OpenStack environment before running tests against it.",
                     "not_available_alert": "OSTF server is not available.",
                     "expected_duration": "Expected Duration",
                     "actual_duration": "Actual Duration",
@@ -364,7 +366,9 @@
                     },
                     "compute": {
                         "title": "Compute",
+                        "kvm_title": "KVM",
                         "kvm_description": "Choose this type of hypervisor if you run OpenStack on hardware",
+                        "qemu_title": "QEMU",
                         "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts"
                     },
                     "network": {
@@ -770,6 +774,10 @@
                             "label": "主机启动时运行客户机",
                             "description": "在主机重启时是否需要重启客户机。 如果启用，此选项会导致nova-compute启动时无条件的重启客户机。如果客户机为停止状态，则启动它。如果是运行状态，则重启"
                         },
+                        "vlan_splinters": {
+                            "label": "打开'OVS VLAN splinters'特性（仅Neutron）",
+                            "description": "将VLAN splinters Open vSwitch方法使用到需要的网卡上。"
+                        },
                         "use_cow_images": {
                             "label": "为映像使用qcow格式",
                             "description": "大多数情况下您需要qcow格式。如果设置为false，将使用原始映像格式运行虚机。基于原始格式的OpenStack当前不支持快照"
@@ -798,12 +806,6 @@
                         "auth_key": {
                             "label": "公开密钥",
                             "description": "部署节点时包含在authorized_keys中的公钥"
-                        }
-                    },
-                    "vlan_splinters": {
-                        "vswitch":{
-                            "label": "打开'OVS VLAN splinters'特性（仅Neutron）",
-                            "description": "将VLAN splinters Open vSwitch方法使用到需要的网卡上。"
                         }
                     }
                 },
