Declarative wizard implementation
Change-Id: Ie8a4b02fdc57d675d8934c15170637a2d5d88cd8
Relates-to-bp: https://blueprints.launchpad.net/fuel/+spec/ui-declarative-wizard

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -370,7 +370,9 @@
                     },
                     "compute": {
                         "title": "Compute",
+                        "kvm_title": "KVM",
                         "kvm_description": "Choose this type of hypervisor if you run OpenStack on hardware",
+                        "qemu_title": "QEMU",
                         "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts"
                     },
                     "network": {
