--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -9,6 +9,8 @@
                 "apply_button": "Apply",
                 "rename_button": "Rename",
                 "delete_button": "Delete",
+                "stop_button": "Stop",
+                "reset_button": "Reset",
                 "save_settings_button": "Save Settings",
                 "cancel_button": "Cancel",
                 "apply_changes_button": "Apply Changes",
@@ -193,7 +195,11 @@
                     "title": "Actions",
                     "rename_environment": "Rename Environment",
                     "delete_environment": "Delete Environment",
-                    "alert_delete": "Clean up each node and return it to the pool of unallocated nodes."
+                    "alert_delete": "Clean up each node and return it to the pool of unallocated nodes.",
+                    "stop_deployment": "Stop Deployment",
+                    "stop_deployment_alert": "Action description is needed.",
+                    "reset_environment": "Reset Environment",
+                    "reset_environment_description": "Action description is needed."
                 },
                 "network_tab": {
                     "title": "Network Settings",
@@ -436,6 +442,16 @@
                     "important": "Important",
                     "incomplete_actions_text": "There are incompleted actions. Removing of the environment may fail and lead to inconsistent state.",
                     "node_returned_text": "Each node will be cleaned up and returned to the pool of unallocated nodes."
+                },
+                "stop_deployment": {
+                    "title": "Stop Deployment",
+                    "important": "Important",
+                    "text": "Action description is needed.",
+                    "provisioning_warning": "Provisioning detected!"
+                },
+                "reset_environment": {
+                    "title": "Reset Environment",
+                    "text": "Action description is needed."
                 },
                 "error_occured": {
                     "alert_text": "A server error has occured. Please contact the administrators.",
